--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     }
   ],
   "require": {
-    "php": ">=5.5"
+    "php": ">=5.5",
+    "clue/ssdp-react": "dev-master"
   },
   "autoload": {
     "psr-4": {
