--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     }
   ],
   "require": {
-    "php": ">=5.5",
-    "a15lam/workspace": "dev-develop as dev-master",
+    "php": ">=5.6",
+    "a15lam/workspace": "dev-master",
     "clue/ssdp-react": "dev-master"
   },
   "autoload": {
