--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   ],
   "require": {
     "php": ">=5.6",
-    "a15lam/workspace": "dev-master",
+    "a15lam/workspace": "~0.1.0",
     "clue/ssdp-react": "dev-master"
   },
   "autoload": {
